# ggml

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  utils.cpp  utils.h
examples/gpt-2/: CMakeLists.txt  convert-japanese-gpt-1b-to-ggml.py  main.cpp
